--- a/src/style.css
+++ b/src/style.css
@@ -187,6 +187,14 @@ body{
   width: 100%;
   height: auto;
   object-fit: contain;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  outline: none;;
+}
+
+.navImage:focus {
+  outline: none;
 }
 
 /* Slot 1 (kolom 1, row 1-2) */
