--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,7 @@ body{
   top: 28%;
   left: 2%;
   right: auto;
+  cursor: pointer;
 }
 
 #buttonImage{
@@ -101,6 +102,7 @@ body{
   width: 100px;
   top: 40%;
   left: 45.75%;
+  cursor: pointer;
 }
 
 #warning{
@@ -132,6 +134,14 @@ body{
   margin-top: 80px;
   margin-bottom: 60px;
   padding: 0;
+}
+
+#restartButton{
+  position: absolute;
+  width: 20%;
+  left: 40%;
+  top: 70%;
+  cursor: pointer;
 }
 
 #inventory{
@@ -177,58 +187,46 @@ body{
   overflow: hidden;
   display: grid;
   grid-template-columns: 30% 40% 30%;
-  grid-template-rows: 50% 50%;
-  width: 20%;
+  grid-template-rows: 40% 20% 40%;
+  width: 200px;
   height: auto;
-  min-width: 120px;
 }
 
 .navImage{
   width: 100%;
   height: auto;
+  max-height: 100%;
   object-fit: contain;
-  user-select: none;
-  -webkit-user-select: none;
-  -webkit-tap-highlight-color: transparent;
-  outline: none;;
 }
 
-.navImage:focus {
-  outline: none;
-}
-
-/* Slot 1 (kolom 1, row 1-2) */
 .slot-1 {
-  grid-row: 1 / 3;
   grid-column: 1 / 2;
+  grid-row: 1 / 4; /* merge row 1-3 */
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
-/* Slot 2 (kolom 2, row 1) */
 .slot-2 {
-  grid-row: 1 / 2;
   grid-column: 2 / 3;
+  grid-row: 1 / 2; /* top image */
 }
 
-/* Slot 4 (kolom 2, row 2) */
-.slot-4 {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-}
-
-/* Slot 3 (kolom 3, row 1-2) */
 .slot-3 {
-  grid-row: 1 / 3;
   grid-column: 3 / 4;
+  grid-row: 1 / 4; /* merge row 1-3 */
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
+.slot-4 {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4; /* bottom image */
+  overflow: hidden;
+}
 
 
 
